dead zone from shifting window size no longer dead

--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -75,10 +75,10 @@ $datepicker-selected-outfocus: desaturate(lighten($secondary-color, 35%), 15%) !
 
 /*** Global ***/
 // Media Query Ranges
-$small-screen-up: 601px !default;
+$small-screen-up: 651px !default;
 $medium-screen-up: 993px !default;
 $large-screen-up: 1201px !default;
-$small-screen: 600px !default;
+$small-screen: 650px !default;
 $medium-screen: 992px !default;
 $large-screen: 1200px !default;
 
